4주차 과제 업데이트

--- a/src/apple/styles/card-component.css
+++ b/src/apple/styles/card-component.css
@@ -10,7 +10,7 @@
 
 .light {
   --button-color: var(--light-black);
-  --button-color-hover: var(--light-black);
+  --button-color-hover: var(--black);
   color: var(--light-black);
 }
 
